--- a/amplify.yml
+++ b/amplify.yml
@@ -5,7 +5,7 @@ backend:
       commands:
         - nvm install 14
         - nvm use 14
-        - npm install -g @aws-amplify/cli@6.3.1
+        - npm install -g @aws-amplify/cli@10.2.1-rc.cf54accdc.0
     build:
       commands:
         - amplifyPush --simple
