--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,7 @@ backend:
       commands:
         - nvm install 14
         - nvm use 14
-        - npm install -g @aws-amplify/cli@rc
+        - npm install -g @aws-amplify/cli@latest
     build:
       commands:
         - amplifyPush --simple
