--- a/amplify.yml
+++ b/amplify.yml
@@ -9,6 +9,7 @@ backend:
         - npm install -g @aws-amplify/cli@latest
     build:
       commands:
+        - amplify -v
         - amplifyPush --simple
 frontend:
   phases:
