--- a/amplify.yml
+++ b/amplify.yml
@@ -6,11 +6,12 @@ backend:
       commands:
         - nvm install 14
         - nvm use 14
-        - npm install -g @aws-amplify/cli@12.12.7-hotfix-rc-20241004-attempt-3.0
+        - npm install -g @aws-amplify/cli@12.13.0-rc.d79627c816e46eb.0
     build:
       commands:
         - amplify -v
-        - amplifyPush --simple
+        - amplifyPush --simple || true
+        - cat ~/.amplify/logs/*
 frontend:
   phases:
     build:
