--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,7 @@ backend:
       commands:
         - nvm install 14
         - nvm use 14
-        - npm install -g @aws-amplify/cli@12.13.0-rc.d79627c816e46eb.0
+        - npm install -g @aws-amplify/cli@rc
     build:
       commands:
         - amplify -v
